--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="pasteleria artesanal, tortas, chez otilia, postres, sabor dulce">
-	<meta name="description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
+	<meta name="description"
+		content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
 	<meta name="author" content="marvillalba9">
 	<meta name="copyright" content="Chez Otilia">
 	<meta property="og: title" content="Chez Otilia Pasteleria Artesanal">
 	<meta property="og: description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes">
-	<meta property="og: image" url="">
-	<meta property="og: url" content="">
+	<meta property="og: image" url="https://chezotilia.000webhostapp.com/">
+	<meta property="og: url" content="https://chezotilia.000webhostapp.com/">
 	<title>Chez Otilia Pasteleria Artesanal</title>
 	<link rel="icon" href="imagenes/chez.jpg">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -18,95 +20,111 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/f62dd1da11.js" crossorigin="anonymous"></script>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
+
 <body>
 	<!-- inicio logo+barra nav -->
 	<nav class="navbar navbar-expand-md">
 		<div class="container-fluid">
-		  <a class="navbar-brand" href="index.html">
-			<img class="logoppal" src="imagenes/LogoFinal_1_ConMail.jpg">
-		  </a>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-			  <li class="nav-item">
-				<a class="nav-link" aria-current="page" href="index.html">INICIO</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="pages/tortas.html">TORTAS</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="pages/cupcakes.html">CUPCAKES</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="pages/recetas.html">RECETAS</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="pages/contacto.html">CONTACTO</a>
-			  </li>
-			</ul>
-		  </div>
+			<a class="navbar-brand" href="index.html">
+				<img class="logoppal" src="imagenes/logo_final.jpg" alt="logo chez otilia">
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="index.html">INICIO</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="pages/tortas.html">TORTAS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="pages/cupcakes.html">CUPCAKES</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="pages/recetas.html">RECETAS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="pages/contacto.html">CONTACTO</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-	  </nav>
+	</nav>
 	<!-- cierre fila de logo+barra nav -->
-	<br>
 	<!-- titulos -->
 	<main>
 		<div class="titulos">
-		    <h1 class="titulo-h1">CHEZ OTILIA</h1>
-		    <h2 class="titulo-h2">Pastelería Artesanal</h2>
-	    </div>
-	<!-- cierre titulos -->
-	<!-- info general y presentacion -->
-	    <div class="infoindex">
-		    <p class="infoindex-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dignissimos rerum fugiat ab vel. Ullam placeat praesentium doloremque delectus, id laudantium tempore necessitatibus optio dolore esse veritatis consequuntur aut.
-		    Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione corporis? Reprehenderit, eligendi, recusandae.</p>
+			<h1 class="titulo-h1">CHEZ OTILIA</h1>
+			<h2 class="titulo-h2">Pastelería Artesanal</h2>
+		</div>
+		<!-- cierre titulos -->
+		<!-- info general y presentacion -->
+		<div class="infoindex">
+			<p class="infoindex-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dignissimos rerum
+				fugiat ab vel. Ullam placeat praesentium doloremque delectus, id laudantium tempore necessitatibus optio
+				dolore esse veritatis consequuntur aut.
+				Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae
+				ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione
+				corporis? Reprehenderit, eligendi, recusandae.</p>
 		</div>
 		<div class="images-desktop">
 			<img class="imgindex" src="imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
 			<img class="imgindex" src="imagenes/pasteleria2.jpg" alt="elementos y utensillos de cocina">
-			<img class="imgindex" src="imagenes/pasteleria3.jpg" alt="porcion de torta de chocolate y porcion de torta red velvet">
+			<img class="imgindex" src="imagenes/pasteleria3.jpg"
+				alt="porcion de torta de chocolate y porcion de torta red velvet">
 		</div>
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
 			<div class="carousel-indicators">
-			  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+					aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+					aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+					aria-label="Slide 3"></button>
 			</div>
 			<div class="carousel-inner">
-			  <div class="carousel-item active">
-				<img src="imagenes/pasteleria3.jpg" class="d-block w-100" alt="porcion de torta de chocolate y porcion de torta red velvet">
-			  </div>
-			  <div class="carousel-item">
-				<img src="imagenes/pasteleria1.jpg" class="d-block w-100" alt="cupcakes coloridos">
-			  </div>
-			  <div class="carousel-item">
-				<img src="imagenes/pasteleria2.jpg" class="d-block w-100" alt="elementos y utensillos de cocina">
-			  </div>
+				<div class="carousel-item active">
+					<img src="imagenes/pasteleria3.jpg" class="d-block w-100"
+						alt="porcion de torta de chocolate y porcion de torta red velvet">
+				</div>
+				<div class="carousel-item">
+					<img src="imagenes/pasteleria1.jpg" class="d-block w-100" alt="cupcakes coloridos">
+				</div>
+				<div class="carousel-item">
+					<img src="imagenes/pasteleria2.jpg" class="d-block w-100" alt="elementos y utensillos de cocina">
+				</div>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  <span class="visually-hidden">Previous</span>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
 			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  <span class="visually-hidden">Next</span>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
 			</button>
-		  </div>
+		</div>
 	</main>
 	<!-- cierre de info general y presentacion -->
-	<br>
 	<!-- footer -->
 	<footer>
 		<div class="footer">Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
 			<a href="https://facebook.com/chezotilia" class="facebook"><i class="fa-brands fa-square-facebook"></i></a>
-			<a href="https://instagram.com/chezotilia" class="instagram"><i class="fa-brands fa-square-instagram"></i></a>
+			<a href="https://instagram.com/chezotilia" class="instagram"><i
+					class="fa-brands fa-square-instagram"></i></a>
 		</div>
 	</footer>
-	<!-- cierre footer -->	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+	<!-- cierre footer -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+		integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
