--- a/pages/cupcakes.html
+++ b/pages/cupcakes.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="pasteleria artesanal, cupcakes, redvelvet, dulces">
-	<meta name="description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
+	<meta name="description"
+		content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
 	<meta name="author" content="marvillalba9">
 	<meta name="copyright" content="Chez Otilia">
 	<meta property="og: title" content="Chez Otilia Pasteleria Artesanal">
 	<meta property="og: description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes">
-	<meta property="og: image" url="">
-	<meta property="og: url" content="">
+	<meta property="og: image" url="https://chezotilia.000webhostapp.com/">
+	<meta property="og: url" content="https://chezotilia.000webhostapp.com/">
 	<title>Cupcakes | Chez Otilia Pasteleria Artesanal</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,79 +20,93 @@
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/f62dd1da11.js" crossorigin="anonymous"></script>
 	<link rel="icon" href="../imagenes/chez.jpg">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
+
 <body>
 	<!-- inicio logo+barra nav -->
 	<nav class="navbar navbar-expand-md">
 		<div class="container-fluid">
-		<a class="navbar-brand" href="../index.html">
-			<img class="logoppal" src="../imagenes/LogoFinal_1_ConMail.jpg">
-		</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="../pages/tortas.html">TORTAS</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="../pages/cupcakes.html">CUPCAKES</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="../pages/recetas.html">RECETAS</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
-			</li>
-			</ul>
-		</div>
+			<a class="navbar-brand" href="../index.html">
+				<img class="logoppal" src="../imagenes/logo_final.jpg" alt="logo chez otilia">
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/tortas.html">TORTAS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/cupcakes.html">CUPCAKES</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 	<!-- cierre fila de logo+barra nav -->
-	<br>
 	<!-- titulos -->
 	<main>
 		<div class="titulos">
-		    <h1 class="titulo-h1">CHEZ OTILIA</h1>
-		    <h2 class="titulo-h2">Pastelería Artesanal</h2>
-	    </div>
-	<!-- cierre titulos -->
+			<h1 class="titulo-h1">CHEZ OTILIA</h1>
+			<h2 class="titulo-h2">Pastelería Artesanal</h2>
+		</div>
+		<!-- cierre titulos -->
 
-	<!-- descriptivo de cupcakes -->
-	    <h2 class="subtitulo1">CUPCAKES</h2>
-	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>
-	    <div class="cupcakes">
-			<img class="img-cupcakes" src="../imagenes/cupchoco.jpg" alt="cupcake de chocolate con buttercream de chocolate">
-			<span>CUPCAKE DE CHOCOLATE Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
-	    </div>
-	    <div class="cupcakes">		
-			<img class="img-cupcakes" src="../imagenes/cupvainilla.jpg" alt="cupcake de vainilla con buttercream de vainilla">
-			<span>CUPCAKE DE VAINILLA Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
-	    </div>
-	    <div class="cupcakes">	
+		<!-- descriptivo de cupcakes -->
+		<h2 class="subtitulo1">CUPCAKES</h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam
+			vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit
+			consectetur.</p>
+		<div class="cupcakes">
+			<img class="img-cupcakes" src="../imagenes/cupchoco.jpg"
+				alt="cupcake de chocolate con buttercream de chocolate">
+			<span>CUPCAKE DE CHOCOLATE Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur,
+				voluptate repellendus tempora architecto velit.</span>
+		</div>
+		<div class="cupcakes">
+			<img class="img-cupcakes" src="../imagenes/cupvainilla.jpg"
+				alt="cupcake de vainilla con buttercream de vainilla">
+			<span>CUPCAKE DE VAINILLA Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate
+				repellendus tempora architecto velit.</span>
+		</div>
+		<div class="cupcakes">
 			<img class="img-cupcakes" src="../imagenes/cuplimon.jpg" alt="cupcake de limon">
-			<span>CUPCAKE DE LIMON Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
-	    </div>
-	    <div class="cupcakes">
-			<img class="img-cupcakes" src="../imagenes/redvelvet.jpg" alt="cupcake red velvet con buttercream de queso crema">
-			<span>CUPCAKE RED VELVET Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
-	    </div>
+			<span>CUPCAKE DE LIMON Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate
+				repellendus tempora architecto velit.</span>
+		</div>
+		<div class="cupcakes">
+			<img class="img-cupcakes" src="../imagenes/redvelvet.jpg"
+				alt="cupcake red velvet con buttercream de queso crema">
+			<span>CUPCAKE RED VELVET Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate
+				repellendus tempora architecto velit.</span>
+		</div>
 	</main>
 	<!-- cierre descriptivo de cupcakes -->
-	<br>
 	<!-- footer -->
 	<footer>
-	    <div class="footer"> Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
+		<div class="footer"> Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
 			<a href="https://facebook.com/chezotilia" class="facebook"><i class="fa-brands fa-square-facebook"></i></a>
-			<a href="https://instagram.com/chezotilia" class="instagram"><i class="fa-brands fa-square-instagram"></i></a>
+			<a href="https://instagram.com/chezotilia" class="instagram"><i
+					class="fa-brands fa-square-instagram"></i></a>
 		</div>
 	</footer>
-	<!-- cierre footer -->	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+	<!-- cierre footer -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+		integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
