--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="pasteleria artesanal, tortas, recetas, dulces, rellenos">
-	<meta name="description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
+	<meta name="description"
+		content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
 	<meta name="author" content="marvillalba9">
 	<meta name="copyright" content="Chez Otilia">
 	<meta property="og: title" content="Chez Otilia Pasteleria Artesanal">
 	<meta property="og: description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes">
-	<meta property="og: image" url="">
-	<meta property="og: url" content="">
+	<meta property="og: image" url="https://chezotilia.000webhostapp.com/">
+	<meta property="og: url" content="https://chezotilia.000webhostapp.com/">
 	<title>Tortas | Chez Otilia Pasteleria Artesanal</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,97 +20,119 @@
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/f62dd1da11.js" crossorigin="anonymous"></script>
 	<link rel="icon" href="../imagenes/chez.jpg">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
+
 <body>
-<!-- inicio logo+barra nav -->
-<nav class="navbar navbar-expand-md">
-	<div class="container-fluid">
-	  <a class="navbar-brand" href="../index.html">
-		<img class="logoppal" src="../imagenes/LogoFinal_1_ConMail.jpg">
-	  </a>
-	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNav">
-		<ul class="navbar-nav">
-		  <li class="nav-item">
-			<a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="../pages/tortas.html">TORTAS</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="../pages/cupcakes.html">CUPCAKES</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="../pages/recetas.html">RECETAS</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
-		  </li>
-		</ul>
-	  </div>
-	</div>
-  </nav>
-<!-- cierre fila de logo+barra nav -->
-	<br>
+	<!-- inicio logo+barra nav -->
+	<nav class="navbar navbar-expand-md">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="../index.html">
+				<img class="logoppal" src="../imagenes/logo_final.jpg" alt="logo chez otilia">
+			</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/tortas.html">TORTAS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/cupcakes.html">CUPCAKES</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<!-- cierre fila de logo+barra nav -->
 	<!-- titulos -->
 	<main>
-	    <div class="titulos">
-		    <h1 class="titulo-h1">CHEZ OTILIA</h1>
-		    <h2 class="titulo-h2">Pastelería Artesanal</h2>
-	    </div>
-	<!-- cierre titulos -->
+		<div class="titulos">
+			<h1 class="titulo-h1">CHEZ OTILIA</h1>
+			<h2 class="titulo-h2">Pastelería Artesanal</h2>
+		</div>
+		<!-- cierre titulos -->
 
-	<!-- descriptivo de tortas -->
-	    <h2 class="subtitulo1">TORTAS</h2>
-	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolorem atque vero nam ducimus perspiciatis earum dolorum cum, illo sunt in magnam natus sint, optio nemo. Aut corrupti dolore possimus. Lorem ipsum dolor sit amet consectetur adipisicing, elit. Et repellat hic blanditiis aliquid tempora, doloremque dignissimos vero ducimus recusandae, nostrum corrupti quo incidunt necessitatibus nulla iste neque autem ab, optio.</p>
-	    <div class="tortas">
-		    <div class="info-tortas">
-			    <img class="img-tortas" src="../imagenes/cheesecakefrutos.jpg" alt="cheesecake de frutos rojos">
-			    <span class="descrip-tortas">CHEESECAKE DE FRUTOS ROJOS Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
-		    </div>
-		    <div class="info-tortas">
-			    <img class="img-tortas" src="../imagenes/cheesecakechoco.jpg" alt="cheesecake de chocolate">
-			    <span class="descrip-tortas">CHEESECAKE DE CHOCOLATE Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>	
-		    </div>
-		    <div class="info-tortas">
-			    <img class="img-tortas" src="../imagenes/brownie.jpg" alt="torta brownie con dulce de leche y merengue">
-			    <span class="descrip-tortas">TORTA BROWNIE Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
-		    </div>
-		    <div class="info-tortas">
-			    <img class="img-tortas" src="../imagenes/moussefrutilla.jpg" alt="torta mousse de frutilla">
-			    <span class="descrip-tortas">MOUSSE DE FRUTILLA Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
-		    </div>
-		    <div class="info-tortas">
-			    <img class="img-tortas" src="../imagenes/manzana.jpg" alt="torta crumble de manzana">
-			    <span class="descrip-tortas">CRUMBLE DE MANZANA Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
-		    </div>
-		    <div class="info-tortas">
-			    <img class="img-tortas" src="../imagenes/chocotorta.jpg" alt="chocotorta">
-			    <span class="descrip-tortas">CHOCOTORTA Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
-		    </div>
-		    <div class="info-tortas">
-			    <img class="img-tortas" src="../imagenes/lemonpie.jpg" alt="torta lemon pie">
-			    <span class="descrip-tortas">LEMON PIE Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
-		    </div>
-		    <div class="info-tortas">
-			    <img class="img-tortas" src="../imagenes/rogel.jpg" alt="torta milhojas de dulce de leche">
-			    <span class="descrip-tortas">TORTA ROGEL Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
-		    </div>
-	    </div>
-    </main>
+		<!-- descriptivo de tortas -->
+		<h2 class="subtitulo1">TORTAS</h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolorem atque vero nam ducimus perspiciatis
+			earum dolorum cum, illo sunt in magnam natus sint, optio nemo. Aut corrupti dolore possimus. Lorem ipsum
+			dolor sit amet consectetur adipisicing, elit. Et repellat hic blanditiis aliquid tempora, doloremque
+			dignissimos vero ducimus recusandae, nostrum corrupti quo incidunt necessitatibus nulla iste neque autem ab,
+			optio.</p>
+		<div class="tortas">
+			<div class="info-tortas">
+				<img class="img-tortas" src="../imagenes/cheesecakefrutos.jpg" alt="cheesecake de frutos rojos">
+				<span class="descrip-tortas">CHEESECAKE DE FRUTOS ROJOS Lorem ipsum dolor sit amet, consectetur
+					adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus
+					quaerat.</span>
+			</div>
+			<div class="info-tortas">
+				<img class="img-tortas" src="../imagenes/cheesecakechoco.jpg" alt="cheesecake de chocolate">
+				<span class="descrip-tortas">CHEESECAKE DE CHOCOLATE Lorem ipsum dolor sit amet, consectetur adipisicing
+					elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus
+					quaerat.</span>
+			</div>
+			<div class="info-tortas">
+				<img class="img-tortas" src="../imagenes/brownie.jpg" alt="torta brownie con dulce de leche y merengue">
+				<span class="descrip-tortas">TORTA BROWNIE Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+					Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
+			</div>
+			<div class="info-tortas">
+				<img class="img-tortas" src="../imagenes/moussefrutilla.jpg" alt="torta mousse de frutilla">
+				<span class="descrip-tortas">MOUSSE DE FRUTILLA Lorem ipsum dolor sit amet, consectetur adipisicing
+					elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus
+					quaerat.</span>
+			</div>
+			<div class="info-tortas">
+				<img class="img-tortas" src="../imagenes/manzana.jpg" alt="torta crumble de manzana">
+				<span class="descrip-tortas">CRUMBLE DE MANZANA Lorem ipsum dolor sit amet, consectetur adipisicing
+					elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus
+					quaerat.</span>
+			</div>
+			<div class="info-tortas">
+				<img class="img-tortas" src="../imagenes/chocotorta.jpg" alt="chocotorta">
+				<span class="descrip-tortas">CHOCOTORTA Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam
+					quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
+			</div>
+			<div class="info-tortas">
+				<img class="img-tortas" src="../imagenes/lemonpie.jpg" alt="torta lemon pie">
+				<span class="descrip-tortas">LEMON PIE Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam
+					quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
+			</div>
+			<div class="info-tortas">
+				<img class="img-tortas" src="../imagenes/rogel.jpg" alt="torta milhojas de dulce de leche">
+				<span class="descrip-tortas">TORTA ROGEL Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+					Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
+			</div>
+		</div>
+	</main>
 	<!-- cierre descriptivo de tortas -->
 	<br>
 	<!-- footer -->
-	<footer>    
-	    <div class="footer"> Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
+	<footer>
+		<div class="footer"> Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
 			<a href="https://facebook.com/chezotilia" class="facebook"><i class="fa-brands fa-square-facebook"></i></a>
-			<a href="https://instagram.com/chezotilia" class="instagram"><i class="fa-brands fa-square-instagram"></i></a>
+			<a href="https://instagram.com/chezotilia" class="instagram"><i
+					class="fa-brands fa-square-instagram"></i></a>
 		</div>
 	</footer>
-	<!-- cierre footer -->	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+	<!-- cierre footer -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+		integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
